--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.properties.hibernate.format_sql=true
+
+security.jwt.secret=xAWwacEQ10o2ajZYwDxwUZjwBL1i9S8U
+security.jwt.duration=3600
