Add saving posts to the database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,9 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+
+#spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
 security.jwt.secret=xAWwacEQ10o2ajZYwDxwUZjwBL1i9S8U
