Change properties to look like .env keys

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=vBulutin
 
-spring.datasource.url=jdbc:mysql://localhost:3306/vbulutin
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/vbulutin}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASS:}
+spring.datasource.driver-class-name=${DB_CLASS:com.mysql.cj.jdbc.Driver}
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=${DB_DDL_AUTO:create-drop}
 
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
-security.jwt.secret=xAWwacEQ10o2ajZYwDxwUZjwBL1i9S8U
-security.jwt.duration=3600
+security.jwt.secret=${JWT_SECRET:xAWwacEQ10o2ajZYwDxwUZjwBL1i9S8U}
+security.jwt.duration=${JWT_DURATION:3600}
