--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=vBulutin
 
-spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/vbulutin}
-spring.datasource.username=${DB_USER:root}
-spring.datasource.password=${DB_PASS:}
-spring.datasource.driver-class-name=${DB_CLASS:com.mysql.cj.jdbc.Driver}
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/vbulutin}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASS:postgres}
 
-spring.jpa.hibernate.ddl-auto=${DB_DDL_AUTO:create-drop}
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
